# hpsdr-emu

./: .gitignore  AGENTS.md  README.md  protocols.md  pyproject.toml
rust/: Cargo.toml
rust/src/: main.rs  protocol1.rs  radio.rs
src/hpsdr_emu/: __main__.py  protocol1.py  protocol2.py  radio.py
