[project]
name = "hpsdr-emu"
version = "0.1.0"
description = "OpenHPSDR Protocol 1 & 2 radio emulator"
requires-python = ">=3.12"
dependencies = ["numpy"]

[project.scripts]
hpsdr-emu = "hpsdr_emu.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hpsdr_emu"]
